Add page padding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-newpush></app-newpush>
-<app-chat></app-chat>
+<div style="text-align:left; padding:20px">
+  <app-newpush></app-newpush>
+  <app-chat></app-chat>
+</div>
